--- a/analysis/load_plot.ipynb
+++ b/analysis/load_plot.ipynb
@@ -13,6 +13,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bc7d51b6-9bc3-49da-b88f-d1c81633ce86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.linspace(0,10,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03f7691b-618d-4183-bbfc-c933a31036bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f453d98a-3d4c-4a29-81f9-a8ba2229e7ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "9b015540",
    "metadata": {},
