--- a/analysis/load_plot.ipynb
+++ b/analysis/load_plot.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4578b278",
+   "id": "c908223d-b9b6-4073-88f0-3d220cb3ccf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,28 +13,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bc7d51b6-9bc3-49da-b88f-d1c81633ce86",
+   "execution_count": 2,
+   "id": "4578b278",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.linspace(0,10,11)"
+    "import pyarrow.parquet as pq\n",
+    "import pyarrow as pa\n",
+    "from numerics.utilities.misc import *\n",
+    "import numpy as np\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0d7196b8-0d6f-47a9-b6b4-2c8b3984e917",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_time = 8.\n",
+    "dt = 1e-2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03f7691b-618d-4183-bbfc-c933a31036bc",
+   "id": "69171173-9aed-4939-bcf1-973513c13729",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f453d98a-3d4c-4a29-81f9-a8ba2229e7ac",
+   "execution_count": 24,
+   "id": "28d4852a-07c2-4821-9777-853482063c90",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def load_gamma(gamma, itraj, what=\"logliks.npy\"):\n",
+    "    flip_params = 0\n",
+    "    h0 = gamma0, omega0, n0, eta0, kappa0 = 100., 0., 1., 1., 9\n",
+    "    h1 = gamma1, omega1, n1, eta1, kappa1 = gamma, 0., 1., 1., 9\n",
+    "    if flip_params == 1:\n",
+    "        params = [h0, h1]\n",
+    "    else:\n",
+    "        params = [h1,h0]\n",
+    "    exp_path = str(params)+\"/\"\n",
+    "    l =load_data(exp_path=exp_path, itraj=itraj, total_time=8., dt=01e-5, what=what)\n",
+    "    return l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fdbd4ee5-6317-4fe2-94a5-03c9a06b12cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_gamma(210., itraj=3, what=\"logliks.npy\")[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "76f18740-2d67-454d-bbc7-200356f292ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[(110.0, 0.0, 1.0, 1.0, 9), (100.0, 0.0, 1.0, 1.0, 9)]/'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1aa51fa2-e86c-4b5b-8aff-f9fea6d09ae2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/data/uab-giq/scratch/matias/quantera/trajectories/mechanical_damp/[(110.0, 0.0, 1.0, 1.0, 9), (100.0, 0.0, 1.0, 1.0, 9)]/1itraj/T_8.0_dt_0.01/'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = get_path_config(total_time=total_time, dt=dt, itraj=1, exp_path=exp_path)\n",
+    "path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e01d63d1-b6ba-4e1e-842c-79d3de280357",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00000000e+00, 0.00000000e+00],\n",
+       "       [0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.75859327e-01, 1.74534677e-01],\n",
+       "       ...,\n",
+       "       [2.25916637e+02, 2.28892487e+02],\n",
+       "       [2.28314854e+02, 2.31372669e+02],\n",
+       "       [2.27835348e+02, 2.30730319e+02]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1e8eda6a-5265-48eb-b016-285f23e2a913",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.random.randn(2,2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "38fd8bd6-476f-4352-9498-e154ebdf99b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.19856734, -1.10453418,  1.71442949, ..., -0.92517384,\n",
+       "       -0.54011586, -0.17580835])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "0b810b26-5837-4782-bc96-a055d0cfc52d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pq.write_table(pa.table({str(k):data[k] for k in range(data.shape[0])}),\"here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "86dfe864-8b9a-47c6-8899-6f3b16ae81f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.16059986,  1.10941365,  0.25992009, ..., -0.02679132,\n",
+       "         1.19097498, -0.49885724],\n",
+       "       [-1.19856734, -1.10453418,  1.71442949, ..., -0.92517384,\n",
+       "        -0.54011586, -0.17580835]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pq.read_table(\"here\").to_pandas().T.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cf4b478-2646-47c6-b122-af0a64f7663c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f453d98a-3d4c-4a29-81f9-a8ba2229e7ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pyarrow' has no attribute 'parquet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-8ae2599eda5a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexp_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitraj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_time\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwhat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"logliks\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/cdisc/numerics/utilities/misc.py\u001b[0m in \u001b[0;36mload_data\u001b[0;34m(exp_path, itraj, total_time, dt, what)\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitraj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_time\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwhat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"logliks\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_path_config\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtotal_time\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitraj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mitraj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexp_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexp_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m     \u001b[0mpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparquet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mwhat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mlogliks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pyarrow' has no attribute 'parquet'"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -44,8 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
