analyzing data - i was computing the alpha with <, better done correctly. Loading in sweep_ammas_better the dictionary with counts and computing errors

--- a/analysis/sweep_gamma.ipynb
+++ b/analysis/sweep_gamma.ipynb
@@ -38,9 +38,10 @@
    "source": [
     "gammas = np.linspace(110, 10000., 32)\n",
     "\n",
+    "total_time = 8.\n",
     "dt = 1e-4\n",
     "times = np.arange(0, 8 + dt, dt )\n",
-    "indis = np.logspace(0,np.log10(len(times)-1), int(1e4)).astype(int)\n",
+    "indis = np.linspace(0,len(times)-1, int(1e4)).astype(int)\n",
     "timind = [times[k] for k in indis]\n",
     "\n",
     "def load_gamma(gamma, itraj, what=\"logliks.npy\", flip_params=0):\n",
