analysis with more points in b, to get cleaner slopes. But i had this typo in the deterministic error and corerceted it, now its two times smaller ! wtf

--- a/analysis/sweep_gamma.ipynb
+++ b/analysis/sweep_gamma.ipynb
@@ -147,7 +147,28 @@
    "id": "52b7f63c-bd85-4843-95df-efb2aa1d517c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "        with open(save_path+\"deter.pickle\",\"rb\") as f:\n",
+    "            deter = pickle.load(f)\n",
+    "            \n",
+    "        alphas = list(deter[\"h1/h0\"].values())\n",
+    "        betas = list(deter[\"h0/h1\"].values())\n",
+    "\n",
+    "        alphas = 1-np.stack(alphas)\n",
+    "        betas = np.stack(betas)\n",
+    "\n",
+    "        avg_err= lambda b: (1-np.exp(-abs(b)))/(np.exp(abs(b)) - np.exp(-abs(b)))\n",
+    "\n",
+    "        errs_bound = np.array([avg_err(b) for b in bpos])\n",
+    "        tot_err = 0.5*(alphas+betas)\n",
+    "\n",
+    "        bb = np.argmin(np.abs(boundsB))\n",
+    "        symmetric = tot_err[bb,:]\n",
+    "        times_to_errs_det = np.array([timind[np.argmin(np.abs(symmetric - bound_err))] for bound_err in errs_bound])\n",
+    "\n",
+    "        det.append(times_to_errs_det)\n"
+   ]
   },
   {
    "cell_type": "code",
