--- a/analysis/gaussianity_breaks.ipynb
+++ b/analysis/gaussianity_breaks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c908223d-b9b6-4073-88f0-3d220cb3ccf3",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4578b278",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "7627d81b-b46f-43c5-baf4-1774e986b359",
    "metadata": {},
    "outputs": [
@@ -42,12 +51,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 64/64 [00:52<00:00,  1.22it/s]\n"
+      "100%|██████████| 63/63 [01:35<00:00,  1.51s/it]\n"
      ]
     }
    ],
    "source": [
-    "gammas = np.linspace(110., 10000, 32) #---> all batch, before 6/11\n",
+    "gammas = np.linspace(110., 10000, 32)[:-1] #---> all batch, before 6/11\n",
     "gammas_ = np.linspace(gammas[0] + 10, gammas[1]-10, 32) #---> all batch, before 6/11\n",
     "\n",
     "gammas = np.array(np.sort(list(gammas) + list(gammas_)))\n",
@@ -203,10 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "id": "69171173-9aed-4939-bcf1-973513c13729",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-0e76c6854d49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgammas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m110.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#---> all batch, before 6/11\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mgammas_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgammas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgammas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#---> all batch, before 6/11\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgammas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgammas\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgammas_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdtotal_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m8.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "gammas = np.linspace(110., 10000, 32) #---> all batch, before 6/11\n",
     "gammas_ = np.linspace(gammas[0] + 10, gammas[1]-10, 32) #---> all batch, before 6/11\n",
@@ -827,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 6,
    "id": "e9954e58-778f-4b6e-a2be-494f0c989904",
    "metadata": {},
    "outputs": [],
@@ -858,6 +879,101 @@
     "np.save(path+\"seq1\",seq1)\n",
     "np.save(path+\"gammas_ok\",gammas_ok)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a9344e7b-83b3-4457-8393-a121ea84e44f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ana_alpha=np.load(path+\"ana_alpha.npy\"),#ana_alpha)\n",
+    "ana_beta=np.load(path+\"ana_beta.npy\"),#ana_beta)\n",
+    "wald_1=np.load(path+\"wald_1.npy\"),# wald_1)\n",
+    "wald_0=np.load(path+\"wald_0.npy\"),# wald_0)\n",
+    "mu0s=np.load(path+\"mu0s.npy\"),# mu0s)\n",
+    "mu1s=np.load(path+\"mu1s.npy\"),# mu1s)\n",
+    "sig1s=np.load(path+\"sig1s.npy\"),# sig1s)\n",
+    "sig0s=np.load(path+\"sig0s.npy\"),# sig0s)\n",
+    "det_al=np.load(path+\"det_al.npy\"),#det_al)\n",
+    "det_be=np.load(path+\"det_be.npy\"),#det_be)\n",
+    "det=np.load(path+\"det.npy\"),#det)\n",
+    "seq0=np.load(path+\"seq0.npy\"),#seq0)\n",
+    "seq1=np.load(path+\"seq1.npy\"),#seq1)\n",
+    "gammas_ok=np.load(path+\"gammas_ok.npy\"),#gammas_ok)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a7bf0194-013d-43b2-9e57-0c6891d98d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = 6.\n",
+    "dB=0.05\n",
+    "\n",
+    "boundsB= np.arange(-B,B+dB,dB)\n",
+    "\n",
+    "bpos = boundsB[boundsB>=0]\n",
+    "bneg = boundsB[boundsB<0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6c380397-1c9f-4c2a-bf60-39bfe6e1a862",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(51, 10000)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "det_al[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e5721b7c-9176-4bb8-9f2d-678ad55c74b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b8a44ef-5759-424b-890f-10cd477fe1a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d1e2745-3f87-4665-8890-176b7e04e15c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
