analysis frequencies ok

--- a/analysis/sweep_gamma.ipynb
+++ b/analysis/sweep_gamma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c908223d-b9b6-4073-88f0-3d220cb3ccf3",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "4578b278",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "69171173-9aed-4939-bcf1-973513c13729",
    "metadata": {},
    "outputs": [],
@@ -63,6 +63,34 @@
     "    exp_path = str(params)+\"/\"\n",
     "    l =load_data(exp_path=exp_path, itraj=itraj, total_time=8., dt=1e-4, what=what)\n",
     "    return l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fadc9d62-5086-46e6-ad4e-c5810434b069",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  110.        ,   429.03225806,   748.06451613,  1067.09677419,\n",
+       "        1386.12903226,  1705.16129032,  2024.19354839,  2343.22580645,\n",
+       "        2662.25806452,  2981.29032258,  3300.32258065,  3619.35483871,\n",
+       "        3938.38709677,  4257.41935484,  4576.4516129 ,  4895.48387097,\n",
+       "        5214.51612903,  5533.5483871 ,  5852.58064516,  6171.61290323,\n",
+       "        6490.64516129,  6809.67741935,  7128.70967742,  7447.74193548,\n",
+       "        7766.77419355,  8085.80645161,  8404.83870968,  8723.87096774,\n",
+       "        9042.90322581,  9361.93548387,  9680.96774194, 10000.        ])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gammas"
    ]
   },
   {
