--- a/analysis/analysis_freq/jupyter_tests.ipynb
+++ b/analysis/analysis_freq/jupyter_tests.ipynb
@@ -2,13 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "id": "29ba7694",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/giq/Desktop/cdisc/analysis/analysis_freq'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "c908223d-b9b6-4073-88f0-3d220cb3ccf3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('/nfs/pic.es/user/m/mbilkis/cdisc')\n",
+    "#os.chdir('/nfs/pic.es/user/m/mbilkis/cdisc')\n",
+    "os.chdir('/home/giq/Desktop/cdisc/')\n",
     "import sys\n",
     "sys.path.insert(0, os.getcwd())\n",
     "\n",
@@ -23,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "4578b278",
    "metadata": {},
    "outputs": [
@@ -31,33 +53,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  1%|          | 10/999 [00:00<00:20, 49.11it/s]"
+      "100%|█████████████████████████████████████████| 999/999 [00:30<00:00, 33.08it/s]\n",
+      "/tmp/ipykernel_266723/3811643401.py:92: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  avg_err= lambda b: (1-np.exp(-abs(b)))/(np.exp(abs(b)) - np.exp(-abs(b)))\n",
+      "/tmp/ipykernel_266723/3811643401.py:92: RuntimeWarning: overflow encountered in exp\n",
+      "  avg_err= lambda b: (1-np.exp(-abs(b)))/(np.exp(abs(b)) - np.exp(-abs(b)))\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR! Session/line number was not unique in database. History logging moved to new session 858\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 999/999 [00:56<00:00, 17.53it/s]\n",
-      "/nfs/pic.es/user/m/mbilkis/qenv_bilkis/lib64/python3.6/site-packages/ipykernel_launcher.py:90: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "/nfs/pic.es/user/m/mbilkis/qenv_bilkis/lib64/python3.6/site-packages/numpy/core/fromnumeric.py:3335: RuntimeWarning: Mean of empty slice.\n",
-      "  out=out, **kwargs)\n",
-      "/nfs/pic.es/user/m/mbilkis/qenv_bilkis/lib64/python3.6/site-packages/numpy/core/_methods.py:161: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data saved in /data/uab-giq/scratch/matias/quantera/trajectories/mechanical_freq/freqs/[10000.0, 10500.0]//T_0.06129936885053255_dt_6.129936885053255e-06/B100_db25_1000/\n",
+      "data saved in /media/giq/Nuevo vol/quantera/trajectories/mechanical_freq/freqs/[10000.0, 11000.0]//T_0.59839860068377_dt_5.9839860068377e-06/B10000_db500_1000/\n",
       "\n"
      ]
     }
@@ -65,10 +72,12 @@
    "source": [
     "Ntraj = 1000\n",
     "omega0, omega1 = 1e4, 1.05e4\n",
+    "omega0, omega1 = 1e4, 1.1e4\n",
+    "\n",
     "omega_pro = (omega0 + omega1)/2\n",
     "period = (2*np.pi/omega_pro)\n",
     "dt = period/100\n",
-    "total_time = 100*period\n",
+    "total_time = 1000*period\n",
     "exp_path = \"freqs/{}/\".format([omega0,omega1])\n",
     "save_path = get_path_config(exp_path=exp_path,total_time=total_time, dt=dt, noitraj=True)\n",
     "os.makedirs(save_path, exist_ok=True)\n",
@@ -82,8 +91,8 @@
     "indis_range = list(range(len(indis)))\n",
     "\n",
     "\n",
-    "B = 100\n",
-    "dB = 25\n",
+    "B = 10000\n",
+    "dB = 500\n",
     "boundsB= np.arange(-B,B+dB,dB)\n",
     "\n",
     "bpos = boundsB[boundsB>=0]\n",
@@ -103,7 +112,7 @@
     "    eta0 = eta1 = 1\n",
     "    kappa0 = kappa1 = 1e3\n",
     "    n0 = n1 = 1\n",
-    "    omega0, omega1 = 1e4, 1.05e4\n",
+    "    omega0, omega1 = 1e4, 1.1e4\n",
     "\n",
     "    h0 = [gamma0, omega0, n0, eta0, kappa0]\n",
     "    h1 = [gamma1, omega1, n1, eta1, kappa1]\n",
@@ -111,7 +120,7 @@
     "    omega_pro = (omega0 + omega1)/2\n",
     "    period = (2*np.pi/omega_pro)\n",
     "    dt = period/100\n",
-    "    total_time = 100*period\n",
+    "    total_time = 1000*period\n",
     "    if flip_params == 1:\n",
     "        params = [h0, h1]\n",
     "    else:\n",
@@ -284,9 +293,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qenv_bilkis",
+   "display_name": "qenv",
    "language": "python",
-   "name": "qenv_bilkis"
+   "name": "qenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -298,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
